<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tpa</groupId>
  <artifactId>dagan</artifactId>    
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>dagan Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Test -->
		<version.junit>4.11</version.junit>
		<version.hamcrest>1.3</version.hamcrest>

		<!-- Logging -->
		<version.slf4j>1.7.5</version.slf4j>		
		
		<jcl.slf4j.version>1.7.12</jcl.slf4j.version>
		<logback.version>1.1.3</logback.version>
		

		<!-- Spring -->
		<version.spring>4.2.6.RELEASE</version.spring>

		<!-- MyBatis -->
		<version.mybatis>3.2.3</version.mybatis>
		<version.mybatis.spring>1.2.1</version.mybatis.spring>

		<!-- Jackson -->
		<version.jackson>2.2.3</version.jackson>

		<!-- Servlet -->
		<version.servlet>2.5</version.servlet>
		
	</properties>
  
  
  <dependencies>
    
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
	
	<!-- hamcrest -->
	<dependency>
		<groupId>org.hamcrest</groupId>
		<artifactId>hamcrest-library</artifactId>
		<version>${version.hamcrest}</version>
		<scope>test</scope>
	</dependency>
	
	<!-- JUnit -->
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>${version.junit}</version>
		<scope>test</scope>
	</dependency>
	
	<!-- Json-path -->
	<dependency>
		<groupId>com.jayway.jsonpath</groupId>
		<artifactId>json-path</artifactId>
		<version>0.9.1</version>
		<scope>test</scope>
	</dependency>

	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>${version.spring}</version>
		<scope>test</scope>			
	</dependency>

	
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-core</artifactId>
		<version>${version.spring}</version>
		<exclusions>
			<exclusion>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
			</exclusion>
		</exclusions>		
	</dependency>
	
		
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-webmvc</artifactId>
	    <version>${version.spring}</version>	    
	</dependency>
	
	
	<!-- Logging with SLF4J & LogBack -->
	<!--  
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${version.slf4j}</version>
	</dependency>
	-->
	
	<!-- Bridge logging from JCL to SLF4j-->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>jcl-over-slf4j</artifactId>
		<version>${jcl.slf4j.version}</version>
	</dependency>
	
	<!-- logback  -->
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-classic</artifactId>
		<version>${logback.version}</version>
	</dependency>
	
	
	<dependency>
	  <groupId>javax.servlet</groupId>
	  <artifactId>javax.servlet-api</artifactId>
	  <version>3.0.1</version>
	  <scope>provided</scope>
	</dependency> 
	
	
  </dependencies>
  
  <build>
    <finalName>resp</finalName>
    <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<argLine>
						-Xms256m -Xmx512m -XX:MaxPermSize=128m
						-Dfile.encoding=UTF-8						
					</argLine>					
				</configuration>
			</plugin>
			
			<!-- web.xml 설정을 없애기 위해서 추가  -->
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-war-plugin</artifactId>
	            <version>2.6</version>
	            <configuration>
	                <failOnMissingWebXml>false</failOnMissingWebXml>
	            </configuration>
        	</plugin>
			
			
			
			
		</plugins>
  </build>
  
  
</project>
